--- a/Trivia Game/Base.lproj/Main.storyboard
+++ b/Trivia Game/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S4Z-RD-Rvb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -16,28 +16,162 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="question-512.png" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m9b-8k-hPr">
+                                <rect key="frame" x="16" y="111" width="343" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="MmO-uD-ap7"/>
+                                </constraints>
+                            </imageView>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Fy-QH-SUY">
+                                <rect key="frame" x="0.0" y="425" width="375" height="216"/>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose a category to play" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YZN-Th-6wG">
+                                <rect key="frame" x="16" y="396" width="343" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="u6J-VX-Dye"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YZN-Th-6wG" secondAttribute="trailing" constant="16" id="AoL-eM-HGk"/>
+                            <constraint firstItem="m9b-8k-hPr" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="111" id="JeB-Yc-xYc"/>
+                            <constraint firstItem="m9b-8k-hPr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="KdQ-Sa-Dyw"/>
+                            <constraint firstItem="7Fy-QH-SUY" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="MPi-C3-ARd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="m9b-8k-hPr" secondAttribute="trailing" constant="16" id="U5N-C9-EBD"/>
+                            <constraint firstItem="YZN-Th-6wG" firstAttribute="top" secondItem="m9b-8k-hPr" secondAttribute="bottom" constant="85" id="Xm6-Yw-aPd"/>
+                            <constraint firstItem="7Fy-QH-SUY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dok-Pe-zEW"/>
+                            <constraint firstItem="YZN-Th-6wG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="iE1-Ku-R5J"/>
+                            <constraint firstItem="7Fy-QH-SUY" firstAttribute="top" secondItem="YZN-Th-6wG" secondAttribute="bottom" constant="8" id="n3U-Xb-2sN"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="VmT-aC-87I">
+                        <barButtonItem key="rightBarButtonItem" title="Play" id="kX7-WE-YRO">
+                            <connections>
+                                <segue destination="Fe8-86-4hg" kind="show" id="QxP-WI-UcF"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="categorySpinner" destination="7Fy-QH-SUY" id="fU9-ul-4bo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-390" y="-49"/>
+            <point key="canvasLocation" x="548" y="-49.025487256371818"/>
         </scene>
-        <!--View Controller-->
+        <!--View Controller Page2-->
         <scene sceneID="rro-fa-S6C">
             <objects>
-                <viewController id="Fe8-86-4hg" sceneMemberID="viewController">
+                <viewController id="Fe8-86-4hg" customClass="ViewControllerPage2" customModule="Trivia_Game" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mN2-dN-MFb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="4M8-AX-BAx">
+                                <rect key="frame" x="26" y="414.5" width="323" height="120"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="io9-wo-gqZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="323" height="30"/>
+                                        <state key="normal" title="answer0"/>
+                                        <connections>
+                                            <action selector="buttonTapped:" destination="Fe8-86-4hg" eventType="touchUpInside" id="PSo-37-t8a"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PQX-1Q-0tZ">
+                                        <rect key="frame" x="0.0" y="30" width="323" height="30"/>
+                                        <state key="normal" title="answer1"/>
+                                        <connections>
+                                            <action selector="buttonTapped:" destination="Fe8-86-4hg" eventType="touchUpInside" id="kEC-U4-cYg"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJt-4B-wyw">
+                                        <rect key="frame" x="0.0" y="60" width="323" height="30"/>
+                                        <state key="normal" title="answer2"/>
+                                        <connections>
+                                            <action selector="buttonTapped:" destination="Fe8-86-4hg" eventType="touchUpInside" id="QNX-Hp-vqe"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dPX-rI-HVy">
+                                        <rect key="frame" x="0.0" y="90" width="323" height="30"/>
+                                        <state key="normal" title="answer3"/>
+                                        <connections>
+                                            <action selector="buttonTapped:" destination="Fe8-86-4hg" eventType="touchUpInside" id="zhd-up-12f"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="HJt-4B-wyw" secondAttribute="trailing" id="KqH-uL-OMl"/>
+                                    <constraint firstItem="HJt-4B-wyw" firstAttribute="leading" secondItem="4M8-AX-BAx" secondAttribute="leading" id="ZEb-yK-rof"/>
+                                    <constraint firstItem="HJt-4B-wyw" firstAttribute="top" secondItem="PQX-1Q-0tZ" secondAttribute="bottom" id="dPX-gC-tEs"/>
+                                </constraints>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="triviaQuestionLabel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IfD-K1-Fp1">
+                                <rect key="frame" x="15" y="94" width="345" height="243"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ple-Ej-rHA">
+                                <rect key="frame" x="15" y="585.5" width="345" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="IfD-K1-Fp1" firstAttribute="leading" secondItem="TJ9-t8-KCA" secondAttribute="leading" constant="15" id="2nK-iy-H83"/>
+                            <constraint firstItem="4M8-AX-BAx" firstAttribute="leading" secondItem="TJ9-t8-KCA" secondAttribute="leading" constant="26" id="7WO-f4-cuV"/>
+                            <constraint firstItem="TJ9-t8-KCA" firstAttribute="trailing" secondItem="Ple-Ej-rHA" secondAttribute="trailing" constant="15" id="CYP-Aq-nu0"/>
+                            <constraint firstItem="TJ9-t8-KCA" firstAttribute="trailing" secondItem="IfD-K1-Fp1" secondAttribute="trailing" constant="15" id="NF3-RY-zlk"/>
+                            <constraint firstItem="IfD-K1-Fp1" firstAttribute="top" secondItem="TJ9-t8-KCA" secondAttribute="top" constant="30" id="XeE-aE-zks"/>
+                            <constraint firstItem="TJ9-t8-KCA" firstAttribute="trailing" secondItem="4M8-AX-BAx" secondAttribute="trailing" constant="26" id="kfg-NU-KxX"/>
+                            <constraint firstItem="TJ9-t8-KCA" firstAttribute="bottom" secondItem="Ple-Ej-rHA" secondAttribute="bottom" constant="12" id="qRC-sM-LG9"/>
+                            <constraint firstItem="Ple-Ej-rHA" firstAttribute="leading" secondItem="TJ9-t8-KCA" secondAttribute="leading" constant="15" id="rJf-cA-oGe"/>
+                            <constraint firstItem="Ple-Ej-rHA" firstAttribute="top" secondItem="4M8-AX-BAx" secondAttribute="bottom" constant="51" id="zIG-DB-hU6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="TJ9-t8-KCA"/>
                     </view>
+                    <connections>
+                        <outlet property="answer0" destination="io9-wo-gqZ" id="j9Y-06-1IC"/>
+                        <outlet property="answer1" destination="PQX-1Q-0tZ" id="t8s-e4-vW7"/>
+                        <outlet property="answer2" destination="HJt-4B-wyw" id="iff-ea-YQH"/>
+                        <outlet property="answer3" destination="dPX-rI-HVy" id="StA-IS-FRL"/>
+                        <outlet property="scoreLabel" destination="Ple-Ej-rHA" id="Fl8-lp-nPj"/>
+                        <outlet property="triviaQuestionLabel" destination="IfD-K1-Fp1" id="oaR-2D-Vx3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jPv-xx-a3s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="-49"/>
+            <point key="canvasLocation" x="1368.8" y="-49.025487256371818"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Yjj-58-1Un">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="S4Z-RD-Rvb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kqz-Ts-F1h">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Aar-ZL-jpR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rLQ-vT-zUo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-391.19999999999999" y="-49.025487256371818"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="question-512.png" width="360" height="512"/>
+    </resources>
 </document>
